# franken_networkx

./: .gitignore  .ruff.toml  .skill-loop-progress.md  AGENTS.md  AGENT_NAME  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_SPEC_FOR_FRANKENNETWORKX_V1.md  CONTRIBUTING.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_NETWORKX_STRUCTURE.md  FEATURE_PARITY.md  PHASE2C_EXTRACTION_PACKET.md  PLAN_TO_PORT_NETWORKX_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  REALITY_CHECK_BRIDGE_PLAN_2026-04-08.md  SECURITY.md  TODO_DOC_PASS00_EXECUTION_TRACKER_2026-02-14.md  TODO_DOC_PASS01_EXECUTION_TRACKER_2026-02-14.md  TODO_DOC_PASS02_EXECUTION_TRACKER_2026-02-14.md  TODO_DOC_PASS03_EXECUTION_TRACKER_2026-02-14.md  TODO_PHASE2C_BD3151_EXECUTION_TRACKER_2026-02-14.md  TODO_PHASE3_EXECUTION_TRACKER_2026-02-13.md  TODO_PHASE4_EXECUTION_TRACKER_2026-02-13.md  TODO_PHASE5_EXECUTION_TRACKER_2026-02-13.md  TODO_PHASE6_EXECUTION_TRACKER_2026-02-13.md  TODO_PORTING_EXECUTION_TRACKER_2026-02-13.md  UPGRADE_LOG.md  fix_unreachables.py  pyproject.toml
crates/fnx-algorithms/: Cargo.toml
crates/fnx-algorithms/benches/: algorithm_benchmarks.rs
crates/fnx-algorithms/examples/: bfs_baseline.rs  memory_baseline.rs
crates/fnx-algorithms/src/: lib.rs  network_simplex_int.rs  test_dijkstra.rs
crates/fnx-algorithms/tests/: centrality_perf_isomorphism.rs
crates/fnx-cgse/: Cargo.toml
crates/fnx-cgse/src/: lib.rs
crates/fnx-classes/: Cargo.toml
crates/fnx-classes/src/: digraph.rs  lib.rs
crates/fnx-conformance/: Cargo.toml
crates/fnx-conformance/fixtures/: README.md  cgse_adversarial_tiebreak_corpus_v1.json  graph_core_mutation_hardened.json  graph_core_shortest_path_strict.json  smoke_case.json
crates/fnx-conformance/pending_fixtures/: view_coherence_strict.json
crates/fnx-conformance/src/: lib.rs
crates/fnx-conformance/tests/: asupersync_adapter_state_machine_gate.rs  asupersync_capability_matrix_gate.rs  asupersync_fault_injection_gate.rs  asupersync_performance_gate.rs  cgse_adversarial_tiebreak_corpus.rs  cgse_legacy_tiebreak_gate.rs  ci_gate_topology_gate.rs  clean_final_compliance_attestation_gate.rs  clean_provenance_gate.rs  clean_safety_gate_pipeline.rs  clean_unsafe_policy_gate.rs  doc_pass00_gap_matrix_gate.rs  doc_pass01_module_cartography_gate.rs  doc_pass02_symbol_api_census_gate.rs  doc_pass03_data_model_gate.rs  doc_pass04_execution_path_tracing_gate.rs  doc_pass05_complexity_perf_memory_gate.rs  e2e_scenario_matrix_gate.rs  e2e_script_pack_gate.rs  ftui_telemetry_adapter_gate.rs  ftui_workflow_event_contract_gate.rs  metamorphic_relations_gate.rs  phase2c_packet_readiness_gate.rs  regression_corpus_gate.rs  reliability_budget_gate.rs  smoke.rs  structured_log_gate.rs
crates/fnx-convert/: Cargo.toml
crates/fnx-convert/src/: lib.rs
crates/fnx-dispatch/: Cargo.toml
crates/fnx-dispatch/src/: lib.rs
crates/fnx-durability/: Cargo.toml
crates/fnx-durability/src/: lib.rs
crates/fnx-generators/: Cargo.toml
crates/fnx-generators/src/: lib.rs
crates/fnx-python/: Cargo.toml
crates/fnx-python/benches/: networkx_head_to_head.rs  public_api_gauntlet.py  public_api_gauntlet.rs  tree_submodule_head_to_head.rs
crates/fnx-python/src/: algorithms.rs  cgse.rs  digraph.rs  generators.rs  lib.rs  network_simplex.rs  readwrite.rs  views.rs
crates/fnx-readwrite/: Cargo.toml
crates/fnx-readwrite/src/: lib.rs
crates/fnx-runtime/: Cargo.toml
crates/fnx-runtime/src/: lib.rs
docs/: backend.md  (+21 more)
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_community/: crash-6b63792eb9cb78723420af135d42e0aaf60511c0  timeout-0f895372f042f169a8b1d872473b37006c1ebf8f  timeout-ece83bdfcacd4d7f27a3f2e1acb2ecdcf6fb1a89
fuzz/artifacts/fuzz_dag/: oom-c35b5a6264116378e58d126bf5f6e8bd101681bb
fuzz/corpus/fuzz_attribute_value/: gml_special.gml  graphml_boolean.xml  json_string.json
fuzz/corpus/fuzz_clustering/: seed_dense
fuzz/corpus/fuzz_distance_measures/: seed_barycenter  seed_core_number  seed_distance_small  seed_harmonic  seed_is_chordal  seed_is_forest  seed_is_tree  seed_k_core  seed_k_truss  seed_onion_layers  seed_treewidth
fuzz/corpus/fuzz_gexf/: directed_attrs.gexf  malformed_attribute.gexf  minimal_undirected.gexf
fuzz/corpus/fuzz_gml/: basic.gml  seed_comments_entities.gml  seed_directed_graph.gml  seed_duplicate_id.gml  seed_duplicate_label.gml  seed_graph_attrs.gml  seed_invalid_directed.gml  seed_missing_edge_endpoint.gml  seed_missing_node_id.gml  seed_missing_node_label.gml  seed_nested_ignored.gml  seed_unclosed_edge.gml  seed_unclosed_node.gml  seed_unknown_endpoint.gml
fuzz/corpus/fuzz_graphml/: basic.graphml
fuzz/corpus/fuzz_json/: basic.json
fuzz/corpus/fuzz_matching/: seed_small
fuzz/corpus/fuzz_node_link/: default_flags_path.json  directed_cycle_attrs.json  empty_payload.json  escaped_identifiers.json  fallback_json_edge_array.json  invalid_directed_array.json  invalid_multigraph_object.json  missing_edge_endpoint.json  mixed_attr_scalars.json  multigraph_true.json  non_bool_flags.json  self_loop_payload.json  undeclared_edge_nodes.json  valid_directed.json
fuzz/corpus/fuzz_pajek/: seed_arcs.net  seed_arcslist.net  seed_basic.net  seed_comments_blank.net  seed_declared_mismatch.net  seed_edgeslist.net  seed_malformed_edges.net  seed_malformed_vertex.net  seed_missing_vertices.net  seed_mixed_labels.net  seed_negative_weights.net  (+2 more)
fuzz/fuzz_targets/: arbitrary_graph.rs  fuzz_adjlist.rs  fuzz_attribute_value.rs  fuzz_bipartite.rs  fuzz_centrality.rs  fuzz_clique.rs  fuzz_clustering.rs  fuzz_community.rs  fuzz_connectivity.rs  fuzz_cycles.rs  fuzz_dag.rs  fuzz_distance_measures.rs  fuzz_edgelist.rs  fuzz_eulerian_chordal.rs  fuzz_flow.rs  fuzz_gexf.rs  fuzz_gml.rs  fuzz_graphml.rs  fuzz_isomorphism.rs  fuzz_json.rs  fuzz_matching.rs  fuzz_multigraph.rs  fuzz_node_link.rs  fuzz_pajek.rs  fuzz_planarity_coloring.rs  fuzz_polynomial_metrics.rs  fuzz_random_generators.rs  fuzz_readwrite_parser_matrix.rs  fuzz_readwrite_roundtrip_builders.rs  fuzz_scc_paths.rs  fuzz_shortest_path.rs  fuzz_snapshot_roundtrip.rs  fuzz_spanning_tree.rs  fuzz_traversal_dominance.rs
(+8548 files in other folders)
