[package]
name = "fnx-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
arbitrary = { version = "1.4.2", features = ["derive"] }
fnx-readwrite = { path = "../crates/fnx-readwrite" }
fnx-classes = { path = "../crates/fnx-classes" }
fnx-algorithms = { path = "../crates/fnx-algorithms" }
fnx_python = { package = "fnx-python", path = "../crates/fnx-python" }
fnx-runtime = { path = "../crates/fnx-runtime" }

# Prevent this from being discovered by cargo workspace
[workspace]

[[bin]]
name = "fuzz_edgelist"
path = "fuzz_targets/fuzz_edgelist.rs"
doc = false

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/fuzz_json.rs"
doc = false

[[bin]]
name = "fuzz_graphml"
path = "fuzz_targets/fuzz_graphml.rs"
doc = false

[[bin]]
name = "fuzz_gml"
path = "fuzz_targets/fuzz_gml.rs"
doc = false

[[bin]]
name = "fuzz_adjlist"
path = "fuzz_targets/fuzz_adjlist.rs"
doc = false

[[bin]]
name = "fuzz_node_link"
path = "fuzz_targets/fuzz_node_link.rs"
doc = false

[[bin]]
name = "fuzz_attribute_value"
path = "fuzz_targets/fuzz_attribute_value.rs"
doc = false

# Structure-aware algorithm fuzzers (E7)
[[bin]]
name = "fuzz_shortest_path"
path = "fuzz_targets/fuzz_shortest_path.rs"
doc = false

[[bin]]
name = "fuzz_centrality"
path = "fuzz_targets/fuzz_centrality.rs"
doc = false

[[bin]]
name = "fuzz_connectivity"
path = "fuzz_targets/fuzz_connectivity.rs"
doc = false

[[bin]]
name = "fuzz_matching"
path = "fuzz_targets/fuzz_matching.rs"
doc = false

[[bin]]
name = "fuzz_flow"
path = "fuzz_targets/fuzz_flow.rs"
doc = false

[[bin]]
name = "fuzz_spanning_tree"
path = "fuzz_targets/fuzz_spanning_tree.rs"
doc = false

[[bin]]
name = "fuzz_clustering"
path = "fuzz_targets/fuzz_clustering.rs"
doc = false

[[bin]]
name = "fuzz_pajek"
path = "fuzz_targets/fuzz_pajek.rs"
doc = false

[[bin]]
name = "fuzz_dag"
path = "fuzz_targets/fuzz_dag.rs"
doc = false

[[bin]]
name = "fuzz_bipartite"
path = "fuzz_targets/fuzz_bipartite.rs"
doc = false

[[bin]]
name = "fuzz_clique"
path = "fuzz_targets/fuzz_clique.rs"
doc = false
