[package]
name = "fnx-algorithms"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fnx-classes = { path = "../fnx-classes" }
mwmatching = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
fnx-runtime = { path = "../fnx-runtime" }
proptest = "1.10.0"
