[package]
name = "fnx-algorithms"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[lib]
doctest = false

[dependencies]
fnx-classes = { version = "0.1.0", path = "../fnx-classes" }
fnx-cgse = { version = "0.1.0", path = "../fnx-cgse" }
fnx-runtime = { version = "0.1.0", path = "../fnx-runtime" }
mwmatching = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
fnx-runtime = { path = "../fnx-runtime" }
proptest = "1.10.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "algorithm_benchmarks"
harness = false
