[package]
name = "fnx-algorithms"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[lib]
doctest = false

[features]
default = []
dhat-heap = ["dhat"]

[dependencies]
fnx-classes = { version = "0.1.0", path = "../fnx-classes" }
fnx-cgse = { version = "0.1.0", path = "../fnx-cgse" }
fnx-runtime = { version = "0.1.0", path = "../fnx-runtime" }
mwmatching = "0.1.1"
mt19937 = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
dhat = { version = "0.3", optional = true }
rand_core = "0.10.1"

[dev-dependencies]
fnx-runtime = { path = "../fnx-runtime" }
proptest = "1.11.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "algorithm_benchmarks"
harness = false

[[example]]
name = "memory_baseline"
required-features = ["dhat-heap"]
