[package]
name = "fnx-cgse"
description = "Canonical Graph Semantics Engine — deterministic tie-break policies and complexity witnesses"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
