[package]
name = "fnx-cgse"
description = "Canonical Graph Semantics Engine — deterministic tie-break policies and complexity witnesses"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
blake3 = "1.8.4"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
