[package]
name = "fnx-classes"
version = "0.2.0"
edition = "2024"
description = "Core graph classes and data structures for FrankenNetworkX"
license-file = "../../LICENSE"
repository.workspace = true

[dependencies]
fnx-runtime = { version = "0.2.0", path = "../fnx-runtime" }
indexmap = "2.14.0"
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proptest = "1.11.0"
