[package]
name = "fnx-classes"
version = "0.2.0"
edition = "2024"
description = "Core graph classes and data structures for FrankenNetworkX"
license-file = "../../LICENSE"
repository.workspace = true

[dependencies]
fnx-runtime = { version = "0.2.0", path = "../fnx-runtime" }
indexmap = "2.14.0"
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }

[features]
# br-r37-c1-thp6w S5: index-keyed MultiGraph storage prototype (parity-gated
# scaffolding for the d58s8-pattern storage flip). Off by default; the module
# is also compiled under cfg(test) so the parity gates and the kernel A/B run
# in the normal test suite.
mg-int-storage-proto = []
# br-r37-c1-thp6w S11: production strangler stage 1 — a revision-keyed slab
# shadow store on MultiGraph, dual-written at the gauntlet-covered mutation
# sites and dropped-to-stale everywhere else. Inert (no field, no code) when
# the feature is off.
mg-int-storage = []

[dev-dependencies]
proptest = "1.11.0"
