[package]
name = "fnx-conformance"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fnx-algorithms = { path = "../fnx-algorithms" }
fnx-cgse = { path = "../fnx-cgse" }
fnx-classes = { path = "../fnx-classes" }
fnx-convert = { path = "../fnx-convert" }
fnx-dispatch = { path = "../fnx-dispatch" }
fnx-generators = { path = "../fnx-generators" }
fnx-readwrite = { path = "../fnx-readwrite" }
fnx-runtime = { path = "../fnx-runtime" }
fnx-views = { path = "../fnx-views" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "mine_counter_examples"
path = "src/bin/mine_counter_examples.rs"

[dev-dependencies]
proptest = "1.10.0"
