[package]
name = "fnx-conformance"
version = "0.2.0"
edition = "2024"
description = "Differential conformance harnesses for FrankenNetworkX"
license-file = "../../LICENSE"
repository.workspace = true

[dependencies]
fnx-algorithms = { version = "0.2.0", path = "../fnx-algorithms" }
fnx-cgse = { version = "0.2.0", path = "../fnx-cgse" }
fnx-classes = { version = "0.2.0", path = "../fnx-classes" }
fnx-convert = { version = "0.2.0", path = "../fnx-convert" }
fnx-dispatch = { version = "0.2.0", path = "../fnx-dispatch" }
fnx-generators = { version = "0.2.0", path = "../fnx-generators" }
fnx-readwrite = { version = "0.2.0", path = "../fnx-readwrite" }
fnx-runtime = { version = "0.2.0", path = "../fnx-runtime" }
fnx-views = { version = "0.2.0", path = "../fnx-views" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "mine_counter_examples"
path = "src/bin/mine_counter_examples.rs"

[[bin]]
name = "dedupe_regressions"
path = "src/bin/dedupe_regressions.rs"

[dev-dependencies]
proptest = "1.11.0"
