[package]
name = "fnx-convert"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fnx-classes = { path = "../fnx-classes" }
fnx-dispatch = { path = "../fnx-dispatch" }
fnx-runtime = { path = "../fnx-runtime" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proptest = "1.10.0"
