[package]
name = "fnx-convert"
version = "0.2.0"
edition = "2024"
description = "Graph conversion utilities preserving FrankenNetworkX semantics"
license-file = "../../LICENSE"
repository.workspace = true

[dependencies]
fnx-classes = { version = "0.2.0", path = "../fnx-classes" }
fnx-dispatch = { version = "0.2.0", path = "../fnx-dispatch" }
fnx-runtime = { version = "0.2.0", path = "../fnx-runtime" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proptest = "1.11.0"
serde_json = "1.0"
