[package]
name = "fnx-python"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "PyO3 Python bindings for FrankenNetworkX — a Rust-backed drop-in replacement for NetworkX"

[lib]
name = "_fnx"
crate-type = ["cdylib", "rlib"]

[dependencies]
fnx-classes = { path = "../fnx-classes" }
fnx-algorithms = { path = "../fnx-algorithms" }
fnx-cgse = { path = "../fnx-cgse" }
fnx-generators = { path = "../fnx-generators" }
fnx-readwrite = { path = "../fnx-readwrite" }
fnx-convert = { path = "../fnx-convert" }
fnx-views = { path = "../fnx-views" }
fnx-runtime = { path = "../fnx-runtime" }
hex = "0.4.3"
pyo3 = { version = "0.28.3", features = ["abi3-py310", "multiple-pymethods"] }
pyo3-log = "0.13.3"
log = "0.4.29"
serde_json = "1.0.149"

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
proptest = "1.11.0"
