[package]
name = "fnx-python"
version = "0.2.0"
edition = "2024"
license-file = "../../LICENSE"
description = "PyO3 Python bindings for FrankenNetworkX — a Rust-backed drop-in replacement for NetworkX"
repository.workspace = true

[lib]
name = "_fnx"
crate-type = ["cdylib", "rlib"]

[dependencies]
fnx-classes = { version = "0.2.0", path = "../fnx-classes" }
fnx-algorithms = { version = "0.2.0", path = "../fnx-algorithms" }
fnx-cgse = { version = "0.2.0", path = "../fnx-cgse" }
fnx-generators = { version = "0.2.0", path = "../fnx-generators" }
fnx-readwrite = { version = "0.2.0", path = "../fnx-readwrite" }
fnx-convert = { version = "0.2.0", path = "../fnx-convert" }
fnx-views = { version = "0.2.0", path = "../fnx-views" }
fnx-runtime = { version = "0.2.0", path = "../fnx-runtime" }
hex = "0.4.3"
pyo3 = { version = "0.28.3", features = ["abi3-py310", "multiple-pymethods"] }
pyo3-log = "0.13.3"
log = "0.4.29"
serde_json = "1.0.149"
rustc-hash = "2.1.2"

[features]
extension-module = ["pyo3/extension-module"]
bench-internals = []

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

[[bench]]
name = "networkx_head_to_head"
harness = false

[[bench]]
name = "public_api_gauntlet"
harness = false

[[bench]]
name = "tree_submodule_head_to_head"
harness = false
