[package]
name = "fnx-readwrite"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fnx-classes = { path = "../fnx-classes" }
fnx-dispatch = { path = "../fnx-dispatch" }
fnx-runtime = { path = "../fnx-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
proptest = "1.10.0"
