[package]
name = "fnx-runtime"
version = "0.2.0"
edition = "2024"
description = "Runtime support types for deterministic FrankenNetworkX graph algorithms"
license-file = "../../LICENSE"
repository.workspace = true

[features]
default = []
asupersync-integration = ["dep:asupersync"]
ftui-integration = ["dep:ftui"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
asupersync = { version = "0.3.1", optional = true, default-features = false }
ftui = { path = "/dp/frankentui/crates/ftui", version = "0.4.1", optional = true, default-features = false }
