[package]
name = "fnx-runtime"
version = "0.2.0"
edition = "2024"
description = "Runtime support types for deterministic FrankenNetworkX graph algorithms"
license-file = "../../LICENSE"
repository.workspace = true

[features]
default = []
asupersync-integration = ["dep:asupersync"]
ftui-integration = ["dep:ftui"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
asupersync = { version = "0.3.4", optional = true, default-features = false }
# Registry dependency so clean checkouts resolve without the author's local
# /dp/frankentui sibling (GH #2). For local frankentui development, use an
# untracked .cargo/config.toml with [patch.crates-io] ftui = { path = ... }.
ftui = { version = "0.5.0", optional = true, default-features = false }

[[bin]]
name = "cgse_policy_bench"
path = "src/bin/cgse_policy_bench.rs"
test = false
bench = true
harness = false
